# data-mesh-platform

./: .devcontainer.json  .gitignore  Makefile  README.md  pyproject.toml
.docker/: Dockerfile  entrypoint.sh
.github/: action.yml
.github/workflows/: github-actions-main.yml  main.old  main.yml
dmp/cli/: main.py
dmp/cli/commands/: bootstrap.py  dp.py
dmp/cli/resources/: data_product_template.json
dmp/infra/: platform.py
dmp/infra/terraform/platform/: main.tf
dmp/platform/: bootstrap.py  dataproducts.py
tests/: test_dmp.py
