[tool.poetry]
name = "data-mesh-platform"
version = "0.1.0"
description = ""
authors = ["Ricardo Wendell <rickwendell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
