[tool.poetry]
name = "data-mesh-platform"
version = "0.1.0"
description = ""
authors = ["Ricardo Wendell <rickwendell@gmail.com>"]
packages = [ { include = "dmp" } ]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dmp = "dmp.cli.main:cli"